--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -124,6 +124,7 @@ body.page-task {
                         margin-top: 20px;
                         column-gap: 20px;
                         flex-wrap: wrap;
+                        row-gap: 15px;
                         @media (max-width: 850px) {
                              flex-wrap: wrap;
                        }
@@ -815,8 +816,11 @@ body.page-task {
              width: 100%;
          }
          .select_list{
-             width: 70%;
+             width: 100%;
              margin-top: 8px;
+             select{
+                width: 100%;
+             }
          }
          .select_location{
             width: 25%;
@@ -844,6 +848,11 @@ body.page-task {
 }
 
 .card{
+    width: 100%;
+    .card-content{
+        background: #f7f8f9;
+        padding-top: 0 !important;
+    }
      .list_filter{
         display: flex;
         flex-wrap: wrap;
@@ -1103,10 +1112,28 @@ body.page-task {
         }
     }
   }
-
+  .card_header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 0px !important;
+    padding-top: 0 !important;
+    background: #f7f8f9;
+  }
   .card-body{
+    .team{
+        column-gap: 10px;
+        flex-wrap: wrap;
+        align-items: center;
+    }
     .team-member{
         margin-right: 1px !important;
+        a{  
+                img{
+                    height: 24px !important;
+                    width: 24px !important;
+                }     
+        }
     }
      .card{
         .progress{
