--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -1117,6 +1117,10 @@ body.page-task {
     padding-bottom: 0px !important;
     padding-top: 0 !important;
     background: #f7f8f9;
+    border-radius: 16px 16px 0px 0px;
+  }
+  .card_main{
+    border-radius: 16px !important;
   }
   .card-body{
     .team{
