--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -165,17 +165,14 @@ body.page-task {
                         }
 
                         .label{
-                          
                              .list_label{
                                 display: flex;
                                 align-items: center;
                                  .name_label{
-                                    background: #d6ecd2;
                                     display: flex;
                                     align-items: center;
                                     padding: 16px 25px;
                                     margin-left: 3px;
-                                    cursor: pointer;
                                     cursor: pointer;
                                     .label_active{
                                         width: 16px;
@@ -436,6 +433,25 @@ body.page-task {
 .list-group-item{
     position: relative;
 }
+.member_of_table{
+    .list_member{
+         margin-top: 8px;
+         .avatar{
+             img{
+                width: 32px;
+                height: 32px;
+                border-radius: 100%;
+             }
+         }
+
+         .name{
+             margin-left: 8px;
+             text-overflow: ellipsis;
+             white-space: nowrap;
+             overflow: hidden;
+         }
+    }
+ }
 .modalMember{
     position: absolute;
     z-index: 100;
