Updated function edit project

--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -34,6 +34,11 @@ body.page-task {
     align-items: flex-start;
 }
 
+// .page-task .card-body {
+//     flex: 1 1 auto;
+//     min-height: 1px;
+//     padding: 1.25rem;
+// }
 .card-title {
     font-size: 15px;
     margin: 0 0 7px 0;
@@ -941,6 +946,11 @@ body.page-task {
     padding-bottom: 20px;
     padding: 15px 25px !important;
 
+    .button {
+        background: #ecedf0;
+        margin-top: 5px !important;
+    }
+
     .title {
         margin-left: 0px;
         margin-top: 9px !important;
@@ -974,11 +984,10 @@ body.page-task {
         margin-top: 5px;
 
         .btn {
-            background: #ecedf0;
+            // background: #ecedf0;
             padding: 0px 0;
             border-radius: 5px;
             text-align: inherit;
-            padding: 2px 18px;
             cursor: pointer;
 
             p {
@@ -1494,4 +1503,8 @@ body.page-task {
 
 .w-calc {
     width: calc(100% - 136px) !important;
+}
+
+.border-none {
+    border: none !important;
 }
