--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -530,7 +530,7 @@ body.page-task {
 .member_of_table {
     .list_member {
         margin-top: 8px;
-
+        cursor: pointer;
         .avatar {
             img {
                 width: 32px;
@@ -1512,6 +1512,9 @@ body.page-task {
     width: calc(100% - 136px) !important;
 }
 
+.border-none {
+    border: none !important;
+}
 .user_manager{
     .dataTables_paginate{
         .current{
@@ -1519,7 +1522,6 @@ body.page-task {
         }
     }
 }
-
 .deadline{
     background: #eaecf0;
     border-radius: 7px;
@@ -1530,5 +1532,53 @@ body.page-task {
         padding: 0 3px;
         margin-left: 4px;
         border-radius: 3px;
+    }
+}
+.profile{
+    .card-body-user{
+       border: 1px solid #cfcfcf!important;
+       border-radius: 11px;
+
+    }
+    .profile-card-body{
+       border: 1px solid #cfcfcf!important;
+        border-radius: 11px;
+        border-bottom: 5px solid #cfcfcf !important;
+    }
+    .wrap-img {
+        width: 120px;
+        height: 120px;
+        overflow: hidden;
+        border-radius: 100%;
+        position: relative;
+        padding: 0;
+        img{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            border-radius: 100%;
+            object-fit: cover;
+        }        
+    }
+    .avatar{
+        .choose_avatar{
+            display: block;
+            width: 120px;
+            height: 100%;
+            opacity: 0;
+            position: absolute;
+            cursor: pointer;
+        }
+    }
+}
+.ul-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    p{
+        margin: 0;
+        text-transform: capitalize;
     }
 }
