--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -18,7 +18,7 @@
     --#{$prefix}card-group-margin: #{$card-group-margin};
 }
 .login_register{
-    overflow: hidden;
+    overflow-x: hidden;
 }
 body.page-task {
     margin: 0;
